--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "*.css"
   ],
   "scripts": {
-    "start": "remotion studio",
+    "dev": "remotion studio",
     "build": "remotion render MyComp out/video.mp4",
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc"
@@ -23,7 +23,10 @@
   "dependencies": {
     "@remotion/bundler": "4.0.50",
     "@remotion/cli": "4.0.50",
+    "@remotion/media-utils": "^4.0.50",
     "@remotion/zod-types": "4.0.50",
+    "@tensorflow-models/facemesh": "^0.0.5",
+    "@tensorflow/tfjs": "^4.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remotion": "4.0.50",
@@ -31,11 +34,11 @@
   },
   "devDependencies": {
     "@remotion/eslint-config": "4.0.50",
+    "@remotion/tailwind": "4.0.50",
     "@types/react": "^18.0.26",
     "@types/web": "^0.0.86",
     "eslint": "^8.43.0",
     "prettier": "^2.8.8",
-    "@remotion/tailwind": "4.0.50",
     "typescript": "^4.9.4"
   },
   "packageManager": "pnpm@8.8.0"
