--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,9 @@
 	"extends": "@remotion",
 	"env": {
 		"node": true
+	},
+	"rules": {
+		"camelcase": "off",
+		"capitalized-comments": "off",
 	}
 }
