--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,177 @@
-pytube
-pydub
-google-cloud-speech
+aiohttp==3.9.5
+aiosignal==1.3.1
+aiostream==0.5.2
+alembic==1.13.1
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.3.0
+asteroid-filterbanks==0.4.0
+async-timeout==4.0.3
+attrs==23.2.0
+audioread==3.0.1
+av==11.0.0
+Brotli==1.1.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+colorlog==6.8.2
+contourpy==1.2.1
+ctranslate2==4.3.0
+cycler==0.12.1
+decorator==5.1.1
+dnspython==2.6.1
+docopt==0.6.2
+einops==0.8.0
+email_validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+faster-whisper==1.0.0
+filelock==3.14.0
+flatbuffers==24.3.25
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.5.0
+google-api-core==2.19.0
+google-auth==2.29.0
+google-cloud-speech==2.26.0
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.64.0
+grpcio-status==1.62.2
+grpclib==0.4.7
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.0
+humanfriendly==10.0
+hyperframe==6.0.1
+HyperPyYAML==1.2.2
+idna==3.7
+Jinja2==3.1.4
+joblib==1.4.2
+julius==0.2.7
+kiwisolver==1.4.5
+lazy_loader==0.4
+librosa==0.10.2.post1
+lightning==2.2.4
+lightning-utilities==0.11.2
+llvmlite==0.42.0
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+modal==0.62.177
+modal-client==0.62.177
+mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.5
+mutagen==1.47.0
+networkx==3.3
+nltk==3.8.1
+numba==0.59.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+onnxruntime==1.18.0
+optuna==3.6.1
+orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
+platformdirs==4.2.2
+pooch==1.8.1
+primePy==1.3
+proto-plus==1.23.0
+protobuf==4.25.3
+pyannote.audio==3.1.1
+pyannote.core==5.0.0
+pyannote.database==5.1.0
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pycryptodomex==3.20.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytorch-lightning==2.2.4
+pytorch-metric-learning==2.5.0
+pytube==15.0.0
+pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.32.1
+rich==13.7.1
+rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+safetensors==0.4.3
+scikit-learn==1.4.2
+scipy==1.13.0
+semver==3.0.2
+sentencepiece==0.2.0
+shellingham==1.5.4
+sigtools==4.0.1
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soundfile==0.12.1
+soxr==0.3.7
+speechbrain==1.0.0
+SQLAlchemy==2.0.30
+starlette==0.37.2
+sympy==1.12
+synchronicity==0.6.7
+tabulate==0.9.0
+tensorboardX==2.6.2.2
+threadpoolctl==3.5.0
+tokenizers==0.15.2
+toml==0.10.2
+torch==2.3.0
+torch-audiomentations==0.11.1
+torch-pitch-shift==1.2.4
+torchaudio==2.3.0
+torchmetrics==1.4.0.post0
+tqdm==4.66.4
+transformers==4.39.3
+triton==2.3.0
+typer==0.12.3
+types-certifi==2021.10.8.3
+types-toml==0.10.8.20240310
+typing_extensions==4.11.0
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.1
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
+whisperx==3.1.1
+yarl==1.9.4
+youtube-dl==2021.12.17
+yt-dlp==2024.4.9
