--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aeneas==1.7.3.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 aiostream==0.5.2
@@ -5,36 +6,54 @@ alembic==1.13.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.3.0
+apturl==0.5.2
+asgiref==3.7.2
 asteroid-filterbanks==0.4.0
 async-timeout==4.0.3
 attrs==23.2.0
 audioread==3.0.1
 av==11.0.0
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+blinker==1.4
+Brlapi==0.8.3
 Brotli==1.1.0
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
+chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.4
 coloredlogs==15.0.1
 colorlog==6.8.2
+command-not-found==0.3
 contourpy==1.2.1
+cryptography==3.4.8
 ctranslate2==4.3.0
+cupshelpers==1.0
 cycler==0.12.1
+dbus-python==1.2.18
 decorator==5.1.1
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 dnspython==2.6.1
 docopt==0.6.2
+duplicity==0.8.21
 einops==0.8.0
 email_validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+fasteners==0.14.1
 faster-whisper==1.0.0
 filelock==3.14.0
 flatbuffers==24.3.25
 fonttools==4.51.0
 frozenlist==1.4.1
 fsspec==2024.5.0
+future==0.18.2
 google-api-core==2.19.0
 google-auth==2.29.0
 google-cloud-speech==2.26.0
@@ -43,10 +62,12 @@ greenlet==3.0.3
 grpcio==1.64.0
 grpcio-status==1.62.2
 grpclib==0.4.7
+gyp==0.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.5
+httplib2==0.20.2
 httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.0
@@ -54,15 +75,28 @@ humanfriendly==10.0
 hyperframe==6.0.1
 HyperPyYAML==1.2.2
 idna==3.7
+importlib-metadata==4.6.4
+iniconfig==2.0.0
+jeepney==0.7.1
 Jinja2==3.1.4
 joblib==1.4.2
 julius==0.2.7
+kazam==1.4.5
+keyring==23.5.0
 kiwisolver==1.4.5
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 lazy_loader==0.4
 librosa==0.10.2.post1
 lightning==2.2.4
 lightning-utilities==0.11.2
 llvmlite==0.42.0
+lockfile==0.12.2
+louis==3.20.0
+lxml==5.1.0
+macaroonbakery==1.3.1
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -70,10 +104,13 @@ matplotlib==3.9.0
 mdurl==0.1.2
 modal==0.62.177
 modal-client==0.62.177
+monotonic==1.6
+more-itertools==8.10.0
 mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
 mutagen==1.47.0
+netifaces==0.11.0
 networkx==3.3
 nltk==3.8.1
 numba==0.59.1
@@ -90,18 +127,25 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.0
+olefile==0.46
 omegaconf==2.3.0
 onnxruntime==1.18.0
 optuna==3.6.1
 orjson==3.10.3
 packaging==24.0
 pandas==2.2.2
+paramiko==2.9.3
+pexpect==4.8.0
 pillow==10.3.0
 platformdirs==4.2.2
+pluggy==1.4.0
 pooch==1.8.1
 primePy==1.3
 proto-plus==1.23.0
 protobuf==4.25.3
+ptyprocess==0.7.0
+py==1.11.0
 pyannote.audio==3.1.1
 pyannote.core==5.0.0
 pyannote.database==5.1.0
@@ -109,22 +153,34 @@ pyannote.metrics==3.2.1
 pyannote.pipeline==3.0.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycairo==1.20.1
 pycparser==2.22
 pycryptodomex==3.20.0
+pycups==2.0.1
 pydantic==2.7.1
 pydantic_core==2.18.2
 pydub==0.25.1
 Pygments==2.18.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
 pyparsing==3.1.2
+pyRFC3339==1.1
+pytest==6.2.5
+python-apt==2.4.0+ubuntu3
 python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytorch-lightning==2.2.4
 pytorch-metric-learning==2.5.0
 pytube==15.0.0
 pytz==2024.1
+pyxdg==0.27
 PyYAML==6.0.1
 regex==2024.5.15
+reportlab==3.6.8
 requests==2.32.1
 rich==13.7.1
 rsa==4.9
@@ -133,6 +189,7 @@ ruamel.yaml.clib==0.2.8
 safetensors==0.4.3
 scikit-learn==1.4.2
 scipy==1.13.0
+SecretStorage==3.3.1
 semver==3.0.2
 sentencepiece==0.2.0
 shellingham==1.5.4
@@ -141,12 +198,14 @@ six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soundfile==0.12.1
+soupsieve==2.5
 soxr==0.3.7
 speechbrain==1.0.0
 SQLAlchemy==2.0.30
 starlette==0.37.2
 sympy==1.12
 synchronicity==0.6.7
+systemd-python==234
 tabulate==0.9.0
 tensorboardX==2.6.2.2
 threadpoolctl==3.5.0
@@ -165,13 +224,22 @@ types-certifi==2021.10.8.3
 types-toml==0.10.8.20240310
 typing_extensions==4.11.0
 tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
 ujson==5.10.0
+unattended-upgrades==0.1
 urllib3==2.2.1
+usb-creator==0.3.7
 uvicorn==0.29.0
 uvloop==0.19.0
+wadllib==1.3.6
 watchfiles==0.21.0
 websockets==12.0
-whisperx==3.1.1
+whisperx @ git+https://github.com/m-bain/whisperX.git@f2da2f858e99e4211fe4f64b5f2938b007827e17
+xdg==5
+xkit==0.0.0
 yarl==1.9.4
 youtube-dl==2021.12.17
 yt-dlp==2024.4.9
+zipp==1.0.0
