--- a/workflow/.env.example
+++ b/workflow/.env.example
@@ -5,3 +5,10 @@ R2_BUCKET=
 R2_PUBLIC_URL=
 
 MODAL_TRANSCRIBE_URL=
+
+GEMINI_API_KEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+GOOGLE_REFRESH_TOKEN=
